Add basic ad/tracker blocking functionality
Introduces an AdBlocker class implementing domain and URL substring blocking using a configurable blocklist (assets/blocklist.txt). Integrates AdBlocker with the Browser and UI classes to apply network filtering to all views. Updates documentation to describe new blocking features and blocklist format.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -76,6 +76,8 @@ endfunction()
 # --- Original project definition ---
 set(SOURCES "src/Browser.h"
             "src/Browser.cpp"
+            "src/AdBlocker.h"
+            "src/AdBlocker.cpp"
             "src/Tab.h"
             "src/Tab.cpp"
             "src/UI.h"
