Add custom build tasks to VSCode config
Introduced several new build tasks in .vscode/tasks.json for different build scenarios, such as auto-refreshing history and recording on specific events. This enhances developer workflow by providing tailored build commands.

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -11,6 +11,50 @@
 				"$msCompile"
 			],
 			"group": "build"
+		},
+		{
+			"label": "Build (auto-refresh history)",
+			"type": "shell",
+			"command": "cmake --build build --config Release",
+			"args": [],
+			"isBackground": false,
+			"problemMatcher": [
+				"$msCompile"
+			],
+			"group": "build"
+		},
+		{
+			"label": "Build (record only on Enter)",
+			"type": "shell",
+			"command": "cmake --build build --config Release",
+			"args": [],
+			"isBackground": false,
+			"problemMatcher": [
+				"$msCompile"
+			],
+			"group": "build"
+		},
+		{
+			"label": "Build (record on URL change/start)",
+			"type": "shell",
+			"command": "cmake --build build --config Release",
+			"args": [],
+			"isBackground": false,
+			"problemMatcher": [
+				"$msCompile"
+			],
+			"group": "build"
+		},
+		{
+			"label": "Build (auto-refresh history page on change)",
+			"type": "shell",
+			"command": "cmake --build build --config Release",
+			"args": [],
+			"isBackground": false,
+			"problemMatcher": [
+				"$msCompile"
+			],
+			"group": "build"
 		}
 	]
 }
