Add shortcut map build task to VSCode config
Introduces a new build task labeled 'Build (shortcut map)' in .vscode/tasks.json, enabling building with CMake in Release configuration. This provides a convenient way to trigger the build process from VSCode.

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -55,6 +55,17 @@
 				"$msCompile"
 			],
 			"group": "build"
+		},
+		{
+			"label": "Build (shortcut map)",
+			"type": "shell",
+			"command": "cmake --build build --config Release",
+			"args": [],
+			"isBackground": false,
+			"problemMatcher": [
+				"$msCompile"
+			],
+			"group": "build"
 		}
 	]
 }
