Add ARM64 and x64 build orchestration workflows
Introduces new GitHub Actions workflows for orchestrating builds across ARM64 (macOS, Linux) and x64 (Windows, macOS, Linux) platforms. Adds dedicated ARM64 build workflows for macOS and Linux, updates existing platform workflows to support workflow_call and input parameters, and refines runner selection for architecture-specific builds.

--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -1,22 +1,26 @@
 # .github/workflows/build-linux.yml
 # Linux build using SDK archives hosted in the repo's base-sdk branch.
 
-name: Build - Linux
+name: Build - Linux (x64)
 
 on:
   pull_request:
   workflow_dispatch:
+  workflow_call:
     inputs:
       sdk_url:
         description: "Override ULTRALIGHT_SDK_URL (raw .7z in base-sdk branch)"
         required: false
+        type: string
       version:
         description: "Override ULTRALIGHT_VERSION (eg. 1.4.0)"
         required: false
+        type: string
       package_format:
         description: "Package format(s) to produce via CPack (eg. TGZ, DEB, RPM or multi 'TGZ;DEB;RPM')"
         required: false
         default: TGZ
+        type: string
 
 jobs:
   build:
@@ -346,3 +350,4 @@ jobs:
             ${{ github.workspace }}/**/*.tgz
             ${{ github.workspace }}/**/*.deb
             ${{ github.workspace }}/**/*.rpm
+
