--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -6,6 +6,23 @@ name: Build - Linux (x64)
 on:
   pull_request:
   workflow_dispatch:
+    inputs:
+      sdk_url:
+        description: "Override ULTRALIGHT_SDK_URL (raw .7z in base-sdk branch)"
+        required: false
+        type: string
+      version:
+        description: "Override ULTRALIGHT_VERSION (eg. 1.4.0)"
+        required: false
+        type: string
+      webbrowser_version:
+        description: "Override WebBrowser version used in package filenames (default 'dev')"
+        required: false
+        type: string
+      package_format:
+        description: "Package format(s) to produce via CPack (eg. TGZ, DEB, RPM or multi 'TGZ;DEB;RPM')"
+        required: false
+        type: string
   workflow_call:
     inputs:
       sdk_url:
@@ -30,11 +47,16 @@ jobs:
   build:
     runs-on: ubuntu-latest
     env:
-      ULTRALIGHT_SDK_URL: ${{ inputs.sdk_url }}
-      ULTRALIGHT_VERSION: ${{ inputs.version }}
-      WEBBROWSER_VERSION: ${{ inputs.webbrowser_version || 'dev' }}
-      PACKAGE_GENERATORS: ${{ inputs.package_format || 'TGZ' }}
+      ULTRALIGHT_SDK_URL: ${{ inputs.sdk_url || github.event.inputs.sdk_url }}
+      ULTRALIGHT_VERSION: ${{ inputs.version || github.event.inputs.version }}
+      WEBBROWSER_VERSION: ${{ inputs.webbrowser_version || github.event.inputs.webbrowser_version || 'dev' }}
+      PACKAGE_GENERATORS: ${{ inputs.package_format || github.event.inputs.package_format || 'TGZ' }}
     steps:
+      - name: 0. Configure Git (longpaths, autocrlf=false)
+        run: |
+          git config --global core.longpaths true
+          git config --global core.autocrlf false
+
       - name: 1. Checkout Code (with submodules)
         uses: actions/checkout@v4
         with:
@@ -355,4 +377,3 @@ jobs:
             ${{ github.workspace }}/**/*.tgz
             ${{ github.workspace }}/**/*.deb
             ${{ github.workspace }}/**/*.rpm
-
