--- a/.github/workflows/build-all-x64.yml
+++ b/.github/workflows/build-all-x64.yml
@@ -5,17 +5,48 @@ name: Build - All x64
 
 on:
   workflow_dispatch:
+    inputs:
+      sdk_url:
+        description: "Override ULTRALIGHT_SDK_URL (raw .7z in base-sdk branch)"
+        required: false
+        type: string
+      version:
+        description: "Override ULTRALIGHT_VERSION (eg. 1.4.0)"
+        required: false
+        type: string
+      webbrowser_version:
+        description: "Override WebBrowser version used in package filenames (default 'dev')"
+        required: false
+        type: string
+      package_format:
+        description: "Package format(s) for macOS/Linux (eg. TGZ;DMG or TGZ;DEB;RPM)"
+        required: false
+        type: string
   pull_request:
 
 jobs:
   windows:
     uses: ./.github/workflows/build-windows.yml
     secrets: inherit
+    with:
+      sdk_url: ${{ inputs.sdk_url }}
+      version: ${{ inputs.version }}
+      webbrowser_version: ${{ inputs.webbrowser_version }}
 
   macos-x64:
     uses: ./.github/workflows/build-macos.yml
     secrets: inherit
+    with:
+      sdk_url: ${{ inputs.sdk_url }}
+      version: ${{ inputs.version }}
+      webbrowser_version: ${{ inputs.webbrowser_version }}
+      package_format: ${{ inputs.package_format }}
 
   linux-x64:
     uses: ./.github/workflows/build-linux.yml
     secrets: inherit
+    with:
+      sdk_url: ${{ inputs.sdk_url }}
+      version: ${{ inputs.version }}
+      webbrowser_version: ${{ inputs.webbrowser_version }}
+      package_format: ${{ inputs.package_format }}
