Update workflow input description for build version
Changed the 'webbrowser_version' input description in all build workflow YAML files to clarify it overrides the build version name, not just the WebBrowser version in package filenames.

--- a/.github/workflows/build-all-arm.yml
+++ b/.github/workflows/build-all-arm.yml
@@ -15,7 +15,7 @@ on:
         required: false
         type: string
       webbrowser_version:
-        description: "Override WebBrowser version used in package filenames (default 'dev')"
+        description: "Override build version name (default 'dev')"
         required: false
         type: string
       package_format:
