--- a/.github/workflows/build-all-x64.yml
+++ b/.github/workflows/build-all-x64.yml
@@ -15,7 +15,7 @@ on:
         required: false
         type: string
       webbrowser_version:
-        description: "Override WebBrowser version used in package filenames (default 'dev')"
+        description: "Override build version name (default 'dev')"
         required: false
         type: string
       package_format:
