--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -19,7 +19,7 @@ on:
         required: false
         type: string
       webbrowser_version:
-        description: "Override WebBrowser version used in package filenames (default 'dev')"
+        description: "Override build version name (default 'dev')"
         required: false
         type: string
       create_installer:
@@ -37,7 +37,7 @@ on:
         required: false
         type: string
       webbrowser_version:
-        description: "Override WebBrowser version used in package filenames (default 'dev')"
+        description: "Override build version name (default 'dev')"
         required: false
         type: string
       create_installer:
