Add permissions to build-all workflow files
Explicitly set 'contents: read' and 'actions: write' permissions in build-all-arm.yml, build-all-x64.yml, and build-all.yml to improve workflow security and clarity.

--- a/.github/workflows/build-all-arm.yml
+++ b/.github/workflows/build-all-arm.yml
@@ -24,6 +24,10 @@ on:
         type: string
   pull_request:
 
+permissions:
+  contents: read
+  actions: write
+
 jobs:
   macos-arm64:
     uses: ./.github/workflows/build-macos-arm64.yml
