--- a/.github/workflows/build-all.yml
+++ b/.github/workflows/build-all.yml
@@ -24,6 +24,10 @@ on:
         type: string
   pull_request:
 
+permissions:
+  contents: read
+  actions: write
+
 jobs:
   windows:
     uses: ./.github/workflows/build-windows.yml
