Add Download Manager and Downloads Page/System Integration
Introduces DownloadManager for handling file downloads, including tracking, opening, and revealing downloaded files. Adds downloads.html asset and integrates downloads page into UI and Tab, with JavaScript bridge for managing downloads. Updates CMake and asset verification to include new files, and modifies menu and new tab page to link to downloads. Refactors UI and Tab to support download events and callbacks.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -78,6 +78,8 @@ set(SOURCES "src/Browser.h"
             "src/Browser.cpp"
             "src/AdBlocker.h"
             "src/AdBlocker.cpp"
+            "src/DownloadManager.h"
+            "src/DownloadManager.cpp"
             "src/Tab.h"
             "src/Tab.cpp"
             "src/UI.h"
