Enhance whole CI workflows and add NSIS installer for Windows
Adds pull request triggers for main and dev branches to all build workflows, ignoring documentation and .gitignore changes. Updates default package formats for Linux and macOS builds to include multiple formats (TGZ, DEB, RPM, DMG). Improves Windows workflow by automating NSIS installer setup and creation, handling installer generation more robustly, and ensuring artifact upload steps are resilient to missing files.

--- a/.github/workflows/build-linux-arm64.yml
+++ b/.github/workflows/build-linux-arm64.yml
@@ -4,6 +4,12 @@
 name: Build - Linux (ARM64)
 
 on:
+  pull_request:
+    branches: [main, dev]
+    paths-ignore:
+      - "**.md"
+      - "docs/**"
+      - ".gitignore"
   workflow_dispatch:
     inputs:
       sdk_url:
@@ -29,9 +35,9 @@ on:
         required: false
         type: string
       package_format:
-        description: "Package format(s) to produce via CPack (eg. TGZ only for ARM64 here)"
+        description: "Package format(s) to produce via CPack (eg. TGZ, DEB, RPM or multi 'TGZ;DEB;RPM')"
         required: false
-        default: TGZ
+        default: "TGZ;DEB;RPM"
         type: string
 
 jobs:
