--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -4,6 +4,12 @@
 name: Build - Linux (x64)
 
 on:
+  pull_request:
+    branches: [main, dev]
+    paths-ignore:
+      - "**.md"
+      - "docs/**"
+      - ".gitignore"
   workflow_dispatch:
     inputs:
       sdk_url:
@@ -39,7 +45,7 @@ on:
       package_format:
         description: "Package format(s) to produce via CPack (eg. TGZ, DEB, RPM or multi 'TGZ;DEB;RPM')"
         required: false
-        default: TGZ
+        default: "TGZ;DEB;RPM"
         type: string
 
 jobs:
@@ -49,7 +55,7 @@ jobs:
       ULTRALIGHT_SDK_URL: ${{ inputs.sdk_url || github.event.inputs.sdk_url }}
       ULTRALIGHT_VERSION: ${{ inputs.version || github.event.inputs.version }}
       WEBBROWSER_VERSION: ${{ inputs.webbrowser_version || github.event.inputs.webbrowser_version || 'dev' }}
-      PACKAGE_GENERATORS: ${{ inputs.package_format || github.event.inputs.package_format || 'TGZ' }}
+      PACKAGE_GENERATORS: ${{ inputs.package_format || github.event.inputs.package_format || 'TGZ;DEB;RPM' }}
     steps:
       - name: 0. Configure Git (longpaths, autocrlf=false)
         run: |
